Removed placeholder text from editor panel and fixed scoreboard scrollbar bug

--- a/ScoreboardStyle.css
+++ b/ScoreboardStyle.css
@@ -41,7 +41,7 @@
 
 .ScoreboardContent
 {
-    height: 100vh;
+    height: 92vh;
 }
 
 .TeamTitles
